polish up some noticed issues with banner on mobile

--- a/clients/fides-js/src/components/fides.css
+++ b/clients/fides-js/src/components/fides.css
@@ -537,7 +537,7 @@ div#fides-banner-inner .fides-privacy-policy {
 }
 
 div#fides-banner-inner .fides-privacy-policy,
-button.fides-banner-button.fides-manage-preferences-button,
+button.fides-banner-button.fides-banner-button-tertiary,
 div.fides-i18n-pseudo-button {
   margin: 0;
   line-height: 1;
@@ -1098,6 +1098,18 @@ div#fides-overlay-wrapper .fides-toggle .fides-toggle-display {
   .fides-banner-secondary-actions {
     gap: 12px;
   }
+
+  /* ordering needs to be specific for mobile to work well and
+  varies from the desktop ordering beyond simple `column-reverse` */
+  .fides-banner-secondary-actions .fides-manage-preferences-button {
+    order: 0;
+  }
+  .fides-banner-secondary-actions #fides-privacy-policy-link {
+    order: 1;
+  }
+  .fides-banner-secondary-actions .fides-i18n-menu {
+    order: 2;
+  }
 }
 /* TCF should always be full width and not floating */
 .fides-tcf-banner-container {
@@ -1111,6 +1123,11 @@ div#fides-overlay-wrapper .fides-toggle .fides-toggle-display {
 }
 .fides-tcf-banner-container #fides-privacy-policy-link {
   margin: auto;
+}
+@media screen and (max-width: 768px) {
+  .fides-tcf-banner-container #fides-banner {
+    padding: 24px;
+  }
 }
 
 /* Paging */
